// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Playlist renders correctly 1`] = `
<WithStyles(Table)>
  <WithStyles(TableHead)>
    <WithStyles(TableRow)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          className="Playlist-head-1"
          padding="checkbox"
          width={64}
        />
      </MediaQuery>
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Title
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          className="Playlist-head-1"
        >
          Artist
        </WithStyles(TableCell)>
        <WithStyles(TableCell)
          className="Playlist-head-1"
        >
          Album
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
  </WithStyles(TableHead)>
  <WithStyles(TableBody)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": "Playlist-currentSongRow-2",
        }
      }
      hover={true}
      key="1"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          width={64}
        />
      </MediaQuery>
      <WithStyles(TableCell)>
        Animals
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)>
          Muse
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          The 2nd Law
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="2"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          width={64}
        />
      </MediaQuery>
      <WithStyles(TableCell)>
        Coming Back to Life
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)>
          Pink Floyd
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          The Division Bell
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="3"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          width={64}
        />
      </MediaQuery>
      <WithStyles(TableCell)>
        Fade to Black
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)>
          Ride the Lightning
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          Metallica
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
  </WithStyles(TableBody)>
</WithStyles(Table)>
`;

exports[`Playlist shows play button on hover 1`] = `
<WithStyles(Table)>
  <WithStyles(TableHead)>
    <WithStyles(TableRow)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          className="Playlist-head-1"
          padding="checkbox"
          width={64}
        />
      </MediaQuery>
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Title
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          className="Playlist-head-1"
        >
          Artist
        </WithStyles(TableCell)>
        <WithStyles(TableCell)
          className="Playlist-head-1"
        >
          Album
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
  </WithStyles(TableHead)>
  <WithStyles(TableBody)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": "Playlist-currentSongRow-2",
        }
      }
      hover={true}
      key="1"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          width={64}
        />
      </MediaQuery>
      <WithStyles(TableCell)>
        Animals
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)>
          Muse
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          The 2nd Law
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="2"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          width={64}
        />
      </MediaQuery>
      <WithStyles(TableCell)>
        Coming Back to Life
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)>
          Pink Floyd
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          The Division Bell
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="3"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          width={64}
        />
      </MediaQuery>
      <WithStyles(TableCell)>
        Fade to Black
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)>
          Ride the Lightning
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          Metallica
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
  </WithStyles(TableBody)>
</WithStyles(Table)>
`;

exports[`Playlist shows play button on hover 2`] = `
<WithStyles(Table)>
  <WithStyles(TableHead)>
    <WithStyles(TableRow)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          className="Playlist-head-1"
          padding="checkbox"
          width={64}
        />
      </MediaQuery>
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Title
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          className="Playlist-head-1"
        >
          Artist
        </WithStyles(TableCell)>
        <WithStyles(TableCell)
          className="Playlist-head-1"
        >
          Album
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
  </WithStyles(TableHead)>
  <WithStyles(TableBody)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": "Playlist-currentSongRow-2",
        }
      }
      hover={true}
      key="1"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          width={64}
        />
      </MediaQuery>
      <WithStyles(TableCell)>
        Animals
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)>
          Muse
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          The 2nd Law
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="2"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          align="center"
          padding="checkbox"
          width={64}
        >
          <WithStyles(IconButton)
            aria-label="Play Song"
            classes={
              Object {
                "root": "Playlist-iconButtonRoot-3",
              }
            }
            onClick={[Function]}
          >
            <pure(PlayCircleOutlineIcon)
              fontSize="large"
            />
          </WithStyles(IconButton)>
        </WithStyles(TableCell)>
      </MediaQuery>
      <WithStyles(TableCell)>
        Coming Back to Life
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)>
          Pink Floyd
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          The Division Bell
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="3"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          width={64}
        />
      </MediaQuery>
      <WithStyles(TableCell)>
        Fade to Black
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)>
          Ride the Lightning
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          Metallica
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
  </WithStyles(TableBody)>
</WithStyles(Table)>
`;

exports[`Playlist updates current song row background 1`] = `
<WithStyles(Table)>
  <WithStyles(TableHead)>
    <WithStyles(TableRow)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          className="Playlist-head-1"
          padding="checkbox"
          width={64}
        />
      </MediaQuery>
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Title
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          className="Playlist-head-1"
        >
          Artist
        </WithStyles(TableCell)>
        <WithStyles(TableCell)
          className="Playlist-head-1"
        >
          Album
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
  </WithStyles(TableHead)>
  <WithStyles(TableBody)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": "Playlist-currentSongRow-2",
        }
      }
      hover={true}
      key="1"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          width={64}
        />
      </MediaQuery>
      <WithStyles(TableCell)>
        Animals
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)>
          Muse
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          The 2nd Law
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="2"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          width={64}
        />
      </MediaQuery>
      <WithStyles(TableCell)>
        Coming Back to Life
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)>
          Pink Floyd
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          The Division Bell
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="3"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          width={64}
        />
      </MediaQuery>
      <WithStyles(TableCell)>
        Fade to Black
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)>
          Ride the Lightning
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          Metallica
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
  </WithStyles(TableBody)>
</WithStyles(Table)>
`;

exports[`Playlist updates current song row background 2`] = `
<WithStyles(Table)>
  <WithStyles(TableHead)>
    <WithStyles(TableRow)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          className="Playlist-head-1"
          padding="checkbox"
          width={64}
        />
      </MediaQuery>
      <WithStyles(TableCell)
        className="Playlist-head-1"
      >
        Title
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          className="Playlist-head-1"
        >
          Artist
        </WithStyles(TableCell)>
        <WithStyles(TableCell)
          className="Playlist-head-1"
        >
          Album
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
  </WithStyles(TableHead)>
  <WithStyles(TableBody)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="1"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          width={64}
        />
      </MediaQuery>
      <WithStyles(TableCell)>
        Animals
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)>
          Muse
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          The 2nd Law
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": "Playlist-currentSongRow-2",
        }
      }
      hover={true}
      key="2"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          width={64}
        />
      </MediaQuery>
      <WithStyles(TableCell)>
        Coming Back to Life
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)>
          Pink Floyd
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          The Division Bell
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
    <WithStyles(TableRow)
      classes={
        Object {
          "root": null,
        }
      }
      hover={true}
      key="3"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)
          width={64}
        />
      </MediaQuery>
      <WithStyles(TableCell)>
        Fade to Black
      </WithStyles(TableCell)>
      <MediaQuery
        query="(min-device-width: 768px)"
        values={Object {}}
      >
        <WithStyles(TableCell)>
          Ride the Lightning
        </WithStyles(TableCell)>
        <WithStyles(TableCell)>
          Metallica
        </WithStyles(TableCell)>
      </MediaQuery>
    </WithStyles(TableRow)>
  </WithStyles(TableBody)>
</WithStyles(Table)>
`;
